--- a/build.gradle
+++ b/build.gradle
@@ -42,10 +42,10 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     // Cloth Config API
-    modImplementation "me.shedaniel.cloth:cloth-config-fabric:17.0.144"
+    modImplementation "me.shedaniel.cloth:cloth-config-fabric:18.0.145"
 
     // Mod Menu
-    modImplementation "com.terraformersmc:modmenu:13.0.3"
+    modImplementation "com.terraformersmc:modmenu:14.0.0-rc.2"
 
 }
 
