--- a/build.gradle
+++ b/build.gradle
@@ -38,14 +38,14 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-    // Fabric API. This is technically optional, but you probably want it anyway.
+    // Fabric API.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     // Cloth Config API
-    modImplementation "me.shedaniel.cloth:cloth-config-fabric:18.0.145"
+    modImplementation "me.shedaniel.cloth:cloth-config-fabric:19.0.147"
 
     // Mod Menu
-    modImplementation "com.terraformersmc:modmenu:14.0.0-rc.2"
+    modImplementation "com.terraformersmc:modmenu:15.0.0-beta.3"
 
 }
 
